fixes #36: improve zero-to-one section, add compile CLI command (#37)
* Improve zero-to-one section, add compile CLI command

* fixup

* address review comments

* address review comments

--- a/docs/pages/beta/beta-access.mdx
+++ b/docs/pages/beta/beta-access.mdx
@@ -10,8 +10,8 @@ Understand that this is a highly experimental framework and not recommended for 
 1. The objective of this beta release is to gather feedback and improve the framework.
 2. The SDK and CLI are still under development and may have regular breaking changes.
 3. The framework is not yet optimized for gas efficiency and may have high gas costs initially when settling rollup blocks. It may range from 200k to 300k gas per block.
-4. **The L1 and DA settlement cost as well as verification fees is currently sponsored by Stackr and may change in the future.**
-5. The framework is yet audited and may have security vulnerabilities.
+4. **The L1 and DA settlement costs on testnets as well as verification fees is currently sponsored by Stackr and may change in the future.**
+5. The framework is yet to be audited and may have security vulnerabilities.
 
 Please help us by providing feedback and reporting any issues you encounter. We are committed to making the framework better and more secure. 🫡
 
