--- a/docs/pages/beta-access.mdx
+++ b/docs/pages/beta-access.mdx
@@ -1,3 +1,3 @@
 # Beta Access
 
-This page has moved to [Beta Access](/beta/beta-access).
+The SDK is now public and does not require access pass [Start Building](/build/zero-to-one/getting-started).
